[project]
name = "fifth-elephant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.3.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.3",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.9",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
]
